# paper-agent

./: .env.example  .gitignore  .gitmodules  CHANGES_V2.md  Dockerfile  Makefile  PROFESSOR_MESSAGE.md  README.md  docker-compose.yml  evaluate.py  main.py  pyproject.toml  railway.toml  requirements-api.txt  requirements.txt  run_server.py  test_data_sources.py
.github/workflows/: ci.yml
benchmark/: leaderboard.md
benchmark/PaperAffilBench/: README.md
data/: gold_standard.json
docs/: GOLD_STANDARD_GUIDE.md  architecture.md  critic_prompts.md
experiments/: README.md
experiments/final/: REPORT.md  reports_cache.json
experiments/final/tables/: table_4_2.tex  table_4_3.tex  table_4_4.tex
experiments/forecasting/: forecasting_analysis.ipynb
references/: Dockerfile_backend  Dockerfile_frontend  RAILWAY.md
src/: __init__.py  evaluation.py  graph.py  knowledge_base.py  models.py  nodes.py  normalizer.py  state.py
src/analytics/: README.md  __init__.py
src/api/: __init__.py  app.py  models.py  task_manager.py
src/data_sources/: __init__.py  arxiv_client.py  base.py  openalex.py  ror.py  router.py  semantic_scholar.py
src/v1/: __init__.py  analytics.py  graph.py  main.py
src/v1/api/: app.py  task_manager.py
src/v1/data_sources/: __init__.py  openalex.py
src/v2/: __init__.py  cli.py
src/v2/agents/: __init__.py
src/v2/agents/critic/: README.md  __init__.py  critic.py  tool_evidence.py
src/v2/agents/extractors/: README.md  __init__.py  _base.py  acknowledgements.py  email_domain.py  footnote.py  header.py  merge.py
src/v2/analytics/: README.md  __init__.py
src/v2/analytics/forecasting/: co_freq.py  dataset.py  dhgnn_lite.py  evaluate.py  static_gcn.py
src/v2/api/: __init__.py  app.py  models.py
src/v2/eval/: README.md  __init__.py  ablations.py  agreement.py  annotate.py  budget.py  harness.py  llm_judge.py  metrics.py  runner.py
src/v2/kg/: README.md  __init__.py  cli.py  ddl.cypher  graphrag.py  ingest.py  schema.py
src/v2/kg/queries/: __init__.py  coauthor_neighborhood.py  country_strategy_heatmap.py  industry_share_by_venue.py  top_institutions_by_venue.py
src/v2/linkers/: README.md  __init__.py  _cache.py  _errors.py  openalex_institutions.py  ror_linker.py  s2_author_linker.py  s2and_dedup.py
src/v2/orchestration/: README.md  __init__.py  checkpointing.py  contracts.py  coordinator.py  planner.py  reflexion.py  source_router.py
src/v2/parsers/: README.md  __init__.py  docling_parser.py  ensemble.py  marker_parser.py  nougat_parser.py  pymupdf_parser.py  schemas.py
tests/: __init__.py  conftest.py  test_critic.py  test_extractors.py  test_kg.py  test_linkers.py  test_parser_ensemble.py  test_reflexion.py  test_structure.py
tests/fixtures/: create_extractor_fixtures.py  create_fixture_pdfs.py
